--- a/setup/manifests/base/pod-broker/image-puller/subscription-reaper-cronjob.yaml
+++ b/setup/manifests/base/pod-broker/image-puller/subscription-reaper-cronjob.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 kind: CronJob
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 metadata:
   name: image-puller-subscription-reaper
   namespace: pod-broker-system
